name:                d12-hs-env
version:             0.1.0.0
synopsis:            Env helpers for my personal projects
description:         Please see README.org
homepage:            https://github.com/d12frosted/d12-hs-env
license:             MIT
license-file:        LICENSE
author:              Boris Buliga
maintainer:          boris@d12frosted.io
copyright:           2016-2017 Boris Buliga
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Env
  build-depends:       base >= 4.7 && < 5
                     , exceptions >= 0.8 && < 0.9
                     , text >= 1.0 && < 2.0
                     , transformers == 0.5.2.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/d12frosted/d12-hs-env
