name:                d12-hs-env
version:             0.1.1.0
synopsis:            Env helpers for my personal projects
description:         Please see README.org
homepage:            https://gitlab.com/d12frosted/d12-hs-env
license:             MIT
license-file:        LICENSE
author:              Boris Buliga
maintainer:          boris@d12frosted.io
copyright:           2016-2017 Boris Buliga
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Env
  build-depends:       base
                     , exceptions
                     , text
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/d12frosted/d12-hs-env
